# open-sesame

./: .gitignore  .mise.toml  AGENT_ANALYSIS.adversarial-security-review.md  CHANGELOG.md  CROSSCHECK.adversarial-review-validation.md  Cargo.toml  README.md  TRIAGE.security-protocol-analysis.md  config.example.toml  flake.nix  release.config.mjs
.github/templates/: RELEASE_BODY.md  RELEASE_HEADER.md
.github/workflows/: docs.yml  nix.yml  release.yml  test.yml
contrib/systemd/: open-sesame-clipboard.service  open-sesame-desktop.target  open-sesame-headless.target  open-sesame-input.service  open-sesame-launcher.service  open-sesame-profile.service  open-sesame-secrets.service  open-sesame-snippets.service  open-sesame-wm.service  open-sesame.target
core-auth/: Cargo.toml
core-auth/src/: backend.rs  dispatcher.rs  lib.rs  password.rs  password_wrap.rs  ssh.rs  ssh_types.rs  vault_meta.rs
core-config/: Cargo.toml
core-config/src/: lib.rs  loader.rs  schema.rs  validation.rs  watcher.rs
core-crypto/: Cargo.toml
core-crypto/src/: encryption.rs  hkdf.rs  kdf.rs  lib.rs  secure_bytes.rs  secure_vec.rs
core-fuzzy/: Cargo.toml
core-fuzzy/src/: frecency.rs  lib.rs  matcher.rs  search.rs
core-ipc/: Cargo.toml
core-ipc/src/: client.rs  framing.rs  lib.rs  message.rs  noise.rs  noise_keys.rs  registry.rs  server.rs  transport.rs
core-ipc/tests/: daemon_keypair.rs  socket_integration.rs
core-memory/: Cargo.toml
core-memory/src/: alloc.rs  lib.rs
core-profile/: Cargo.toml
core-profile/src/: audit.rs  context.rs  lib.rs
core-secrets/: Cargo.toml
core-secrets/src/: compliance.rs  jit.rs  key_locker.rs  lib.rs  sqlcipher.rs  store.rs
core-types/: Cargo.toml
core-types/src/: auth.rs  constants.rs  crypto.rs  denial.rs  error.rs  events.rs  ids.rs  lib.rs  oci.rs  profile.rs  rpc.rs  security.rs  sensitive.rs  window.rs
daemon-clipboard/: Cargo.toml
daemon-clipboard/src/: main.rs
daemon-input/src/: keyboard.rs  main.rs
daemon-launcher/: Cargo.toml
daemon-launcher/src/: main.rs  scanner.rs
daemon-profile/: Cargo.toml
daemon-profile/src/: activation.rs  context.rs  dispatch.rs  key_rotation.rs  main.rs  sandbox.rs
daemon-secrets/: Cargo.toml
daemon-secrets/src/: acl.rs  crud.rs  key_locker_linux.rs  main.rs  rate_limit.rs
daemon-snippets/: Cargo.toml
daemon-snippets/src/: main.rs
daemon-wm/: Cargo.toml
daemon-wm/src/: commands.rs  controller.rs  hints.rs  ipc_keys.rs  lib.rs  main.rs  mru.rs  overlay.rs  render.rs  sandbox.rs  state.rs
daemon-wm/tests/: wm_integration.rs
docs/src/: SECURITY_HARDENING_FIELD_GUIDE.md
nix/: package-desktop.nix  package-headless.nix  package.nix
open-sesame/: Cargo.toml
open-sesame/src/: init.rs  main.rs  secrets.rs
open-sesame/tests/: cli_integration.rs
platform-linux/: Cargo.toml
platform-linux/src/: clipboard.rs  compositor.rs  cosmic_keys.rs  cosmic_theme.rs  dbus.rs  input.rs  lib.rs  sandbox.rs  security.rs  systemd.rs
platform-macos/src/: lib.rs
platform-windows/src/: lib.rs
scripts/: postinst  postrm  prerm
scripts/desktop/: postinst  postrm  prerm
sesame-workspace/: Cargo.toml
sesame-workspace/src/: config.rs  convention.rs  discover.rs  git.rs  lib.rs
sesame-workspace/src/platform/: linux.rs  mod.rs
src/app/: mod.rs  renderer.rs
tests/: protocol_validation.sh
xtask/src/: main.rs
