[workspace]
members = [
    "core-types",
    "core-config",
    "core-ipc",
    "core-crypto",
    "core-fuzzy",
    "core-secrets",
    "core-profile",
    "platform-linux",
    "platform-macos",
    "platform-windows",
    "daemon-wm",
    "daemon-launcher",
    "daemon-clipboard",
    "daemon-input",
    "daemon-snippets",
    "daemon-profile",
    "daemon-secrets",
    "cli-pds",
    "extension-host",
    "extension-sdk",
]
exclude = ["xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ScopeCreep-zip/open-sesame"
authors = ["usrbinkat"]

# ============================================================================
# Workspace Dependencies
#
# All external deps declared here, referenced by members via `dep.workspace = true`.
# Version pins reflect DEPENDENCIES.*.md research (2026-02-24).
# ============================================================================

[workspace.dependencies]

# -- Internal crates --
core-types      = { path = "core-types" }
core-config     = { path = "core-config" }
core-ipc        = { path = "core-ipc" }
core-crypto     = { path = "core-crypto" }
core-fuzzy      = { path = "core-fuzzy" }
core-secrets    = { path = "core-secrets" }
core-profile    = { path = "core-profile" }
platform-linux  = { path = "platform-linux" }
platform-macos  = { path = "platform-macos" }
platform-windows = { path = "platform-windows" }
extension-host  = { path = "extension-host" }
extension-sdk   = { path = "extension-sdk" }

# -- Serialization --
serde           = { version = "1", features = ["derive"] }
postcard        = { version = "1", features = ["use-std"] }
toml            = "1"
serde_json      = "1"

# -- Types & Errors --
thiserror       = "2"
anyhow          = "1"
uuid            = { version = "1", features = ["v7", "serde"] }
bytes           = "1.11.1"                      # MANDATORY pin: RUSTSEC-2026-0007

# -- Async --
tokio           = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time", "signal"] }

# -- Crypto --
aes-gcm         = "0.10.3"                      # MANDATORY pin: CVE-2023-42811
argon2          = "0.5"
zeroize         = { version = "1", features = ["derive"] }
secrecy         = { version = "0.10", features = ["serde"] }
age             = { version = "0.11", features = ["armor"] }

# -- Database --
rusqlite        = { version = "0.38", features = ["bundled-sqlcipher"] }

# -- Fuzzy --
nucleo          = "0.5"

# -- Config --
notify          = "8"
dirs            = "6"

# -- Logging --
tracing             = "0.1"
tracing-subscriber  = { version = "0.3.20", features = ["env-filter", "fmt", "json", "ansi"] }  # MANDATORY pin: CVE-2025-58160
tracing-journald    = "0.3"

# -- CLI --
clap                = { version = "4", features = ["derive", "env"] }
clap_complete       = "4"
clap_mangen         = "0.2"
comfy-table         = "7"
dialoguer           = { version = "0.12", features = ["fuzzy-select"] }
indicatif           = "0.17"
owo-colors          = "4"

# -- Linux platform --
evdev                   = { version = "0.13", features = ["tokio", "stream-trait"] }
wayland-client          = "0.31"
wayland-protocols       = { version = "0.32", features = ["client", "staging"] }
smithay-client-toolkit  = { version = "0.20", features = ["xkbcommon"] }
cosmic-client-toolkit   = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
cosmic-protocols        = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-protocols" }
zbus                    = { version = "5", default-features = false, features = ["tokio"] }
landlock                = "0.4"
libseccomp              = "0.4"
sd-notify               = "0.4"
libc                    = "0.2"
fontconfig              = "0.10"
ron                     = "0.11"

# -- Linux UI --
gtk4                = { version = "0.10", features = ["v4_16"] }
gtk4-layer-shell    = "0.7"

# -- macOS platform --
security-framework  = "3"
objc2               = "0.6"
core-foundation     = "0.10"
core-graphics       = "0.25"

# -- Windows platform --
# windows crate requires explicit feature selection per API surface
windows             = "0.62"

# -- Daemon-specific --
regex                       = "1"
minijinja                   = { version = "2", features = ["builtins", "macros", "fuel", "json", "urlencode"] }
pcsc                        = "2"
freedesktop-desktop-entry   = "0.8"

# -- Extensions --
wasmtime        = { version = "36", features = ["runtime", "cranelift", "component-model", "std", "pooling-allocator"] }
wasmtime-wasi   = { version = "36", features = ["p3"] }
wit-bindgen     = "0.42"

# -- Testing --
proptest        = "1"
rstest          = "0.25"
criterion       = { version = "0.7", features = ["html_reports"] }
tempfile        = "3"
assert_cmd      = "2"
predicates      = "3"
insta           = { version = "1", features = ["yaml", "json", "redactions"] }
tokio-test      = "0.4"

# -- Build/xtask --
flate2          = "1"

# ============================================================================
# Workspace Lints
# ============================================================================

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# ============================================================================
# Release Profiles
# ============================================================================

[profile.release]
lto = "thin"
strip = true
opt-level = 3
codegen-units = 1

[profile.release-full]
inherits = "release"
lto = "fat"
