[workspace]
members = [
    "core-memory",
    "core-types",
    "core-config",
    "core-ipc",
    "core-crypto",
    "core-fuzzy",
    "core-secrets",
    "core-profile",
    "core-auth",
    "platform-linux",
    "platform-macos",
    "platform-windows",
    "daemon-wm",
    "daemon-launcher",
    "daemon-clipboard",
    "daemon-input",
    "daemon-snippets",
    "daemon-profile",
    "daemon-secrets",
    "open-sesame",
    "sesame-workspace",
    "extension-host",
    "extension-sdk",
]
exclude = ["xtask"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/ScopeCreep-zip/open-sesame"
authors = ["usrbinkat"]

# ============================================================================
# Workspace Dependencies
#
# All external deps declared here, referenced by members via `dep.workspace = true`.
# Version pins reflect DEPENDENCIES.*.md research (2026-02-24).
# ============================================================================

[workspace.dependencies]

# -- Internal crates --
core-memory     = { path = "core-memory" }
core-types      = { path = "core-types" }
core-config     = { path = "core-config" }
core-ipc        = { path = "core-ipc" }
core-crypto     = { path = "core-crypto" }
core-fuzzy      = { path = "core-fuzzy" }
core-secrets    = { path = "core-secrets" }
core-profile    = { path = "core-profile" }
core-auth       = { path = "core-auth" }
platform-linux  = { path = "platform-linux" }
platform-macos  = { path = "platform-macos" }
platform-windows = { path = "platform-windows" }
sesame-workspace = { path = "sesame-workspace" }
extension-host  = { path = "extension-host" }
extension-sdk   = { path = "extension-sdk" }

# -- Serialization --
serde           = { version = "1", features = ["derive"] }
postcard        = { version = "1", features = ["use-std"] }
toml            = "1"
serde_json      = "1"
ron             = "0.9"

# -- Types & Errors --
thiserror       = "2"
anyhow          = "1"
uuid            = { version = "1", features = ["v4", "v5", "v7", "serde"] }
bytes           = "1.11.1"                      # MANDATORY pin: RUSTSEC-2026-0007

# -- Async --
tokio           = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time", "signal", "fs"] }
futures-util    = { version = "0.3", default-features = false, features = ["std"] }
async-trait     = "0.1"

# -- Crypto --
aes-gcm         = { version = "0.10.3", features = ["zeroize"] }  # MANDATORY pin: CVE-2023-42811
aes             = { version = "0.8", features = ["zeroize"] }    # SEC-012: zeroize AES key schedule on drop
argon2          = "0.5"
zeroize         = { version = "1", features = ["derive"] }
blake3          = "1.8"
getrandom       = "0.2"
governor        = { version = "0.10", default-features = false, features = ["std"] }
snow            = "0.10"
pbkdf2          = "0.12"
sha2            = "0.10"
hmac            = "0.12"
hkdf            = "0.12"
hex             = "0.4"
ssh-key             = { version = "0.6.7", features = ["ed25519", "rsa"] }
ssh-agent-client-rs = "1.1.2"

# -- Database --
rusqlite        = { version = "0.38", features = ["bundled-sqlcipher"] }

# -- Fuzzy --
# TODO: pinned to git HEAD because crates.io 0.5.0 does not expose
# Snapshot::matches() (added in helix-editor/nucleo#57, unreleased).
# Revert to crates.io version once nucleo publishes a release with this API.
nucleo          = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9" }

# -- Config --
notify          = "8"
dirs            = "6"

# -- Logging --
tracing             = "0.1"
tracing-subscriber  = { version = "0.3.20", features = ["env-filter", "fmt", "json", "ansi"] }  # MANDATORY pin: CVE-2025-58160
tracing-journald    = "0.3"

# -- CLI --
clap                = { version = "4", features = ["derive", "env"] }
clap_complete       = "4"
clap_mangen         = "0.2"
comfy-table         = "7"
dialoguer           = { version = "0.12", features = ["fuzzy-select"] }
indicatif           = "0.17"
owo-colors          = "4"

# -- Linux platform --
evdev                   = { version = "0.13", features = ["tokio", "stream-trait"] }
# 0.8 matches smithay-client-toolkit's transitive dep; no 0.9 on crates.io.
xkbcommon               = "0.8"
wayland-client          = "0.31"
wayland-protocols       = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr   = { version = "0.3", features = ["client"] }
smithay-client-toolkit  = { version = "0.20", features = ["xkbcommon"] }
cosmic-client-toolkit   = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
cosmic-protocols        = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-protocols" }
zbus                    = { version = "5", default-features = false, features = ["tokio"] }
landlock                = "0.4"
libseccomp              = "0.4"
sd-notify               = "0.4"
libc                    = "0.2"
rustix                  = { version = "1", default-features = false, features = ["process", "event"] }

# -- Linux UI (SCTK overlay rendering) --
tiny-skia           = { version = "0.12", default-features = false, features = ["std"] }
cosmic-text         = "0.12"

# -- Linux UI (GTK4, used by daemon-launcher behind feature flag) --
gtk4                = { version = "0.10", features = ["v4_14"] }

# -- macOS platform --
security-framework  = "3"
objc2               = "0.6"
core-foundation     = "0.10"
core-graphics       = "0.25"

# -- Windows platform --
# windows crate requires explicit feature selection per API surface
windows             = "0.62"

# -- Daemon-specific --
regex                       = "1"
freedesktop-desktop-entry   = "0.8"

# -- Extensions --
wasmtime        = { version = "36", features = ["runtime", "cranelift", "component-model", "std", "pooling-allocator"] }
wasmtime-wasi   = { version = "36", features = ["p3"] }
wit-bindgen     = "0.42"

# -- Testing --
proptest        = "1"
rstest          = "0.25"
criterion       = { version = "0.7", features = ["html_reports"] }
tempfile        = "3"
assert_cmd      = "2"
predicates      = "3"
insta           = { version = "1", features = ["yaml", "json", "redactions"] }
tokio-test      = "0.4"

# -- Build/xtask --
flate2          = "1"

# ============================================================================
# Workspace Lints
# ============================================================================

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# ============================================================================
# Release Profiles
# ============================================================================

[profile.release]
lto = "thin"
strip = true
opt-level = 3
codegen-units = 1

[profile.release-full]
inherits = "release"
lto = "fat"
