[package]
name = "core-memory"
description = "Page-aligned secure memory allocator backed by memfd_secret(2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
zeroize = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
