[package]
name = "core-profile"
description = "Profile schema, context-driven activation, isolation contracts, and atomic switching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
tempfile     = { workspace = true }
serde_json   = { workspace = true }
