[package]
name = "core-profile"
description = "Profile schema, context-driven activation, isolation contracts, and atomic switching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
core-types   = { workspace = true }
blake3       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
tempfile     = { workspace = true }
