[package]
name = "daemon-profile"
description = "Profile orchestrator daemon: hosts IPC bus server, context evaluation, concurrent profile activation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
blake3       = { workspace = true }
dirs         = { workspace = true }
snow         = { workspace = true }
uuid         = { workspace = true }
zeroize      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux      = { workspace = true }
tracing-journald    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos  = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio-test  = { workspace = true }
