[package]
name = "daemon-wm"
description = "Window manager daemon: Wayland overlay window switcher with letter-hint navigation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
dirs         = { workspace = true }
libc         = { workspace = true }

[features]
default = []
gtk = ["dep:gtk4", "dep:gtk4-layer-shell"]

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux      = { workspace = true }
gtk4                = { workspace = true, optional = true }
gtk4-layer-shell    = { workspace = true, optional = true }
tracing-journald    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos  = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio-test  = { workspace = true }
