[package]
name = "open-sesame"
description = "Open Sesame CLI — platform orchestration for multi-agent desktop control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sesame"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = []

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
sesame-workspace = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
comfy-table  = { workspace = true }
dialoguer    = { workspace = true }
owo-colors   = { workspace = true }
zeroize      = { workspace = true }
notify       = { workspace = true }
toml         = { workspace = true }
uuid         = { workspace = true }
blake3       = { workspace = true }
libc         = { workspace = true }
core-auth    = { workspace = true }
core-crypto  = { workspace = true }
ssh-key      = { workspace = true }
ssh-agent-client-rs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux   = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
predicates   = { workspace = true }
tempfile     = { workspace = true }
