[package]
name = "open-sesame"
description = "Open Sesame CLI — platform orchestration for multi-agent desktop control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sesame"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = []

[dependencies]
core-types   = { workspace = true }
core-config  = { workspace = true }
core-ipc     = { workspace = true }
core-profile = { workspace = true }
sesame-workspace = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
comfy-table  = { workspace = true }
dialoguer    = { workspace = true }
dirs         = { workspace = true }
owo-colors   = { workspace = true }
zeroize      = { workspace = true }
notify       = { workspace = true }
toml         = { workspace = true }
uuid         = { workspace = true }
blake3       = { workspace = true }
libc         = { workspace = true }
core-auth    = { workspace = true }
core-crypto  = { workspace = true }
ssh-key      = { workspace = true }
ssh-agent-client-rs = { workspace = true }
getrandom    = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux   = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
predicates   = { workspace = true }
tempfile     = { workspace = true }

[package.metadata.deb]
name = "open-sesame"
maintainer = "usrbinkat"
copyright = "2024-2026 scopecreep.zip"
license-file = ["../LICENSE", "0"]
depends = "libc6, libgcc-s1, libseccomp2"
recommends = "openssh-client"
suggests = "open-sesame-desktop"
section = "utils"
priority = "optional"
extended-description = """\
Open Sesame headless suite: encrypted secret vaults, trust profiles, \
application launching, and snippet expansion. Suitable for servers, \
containers, VMs, and headless environments. Install open-sesame-desktop \
for window management, clipboard, and input capture on COSMIC/Wayland."""

maintainer-scripts = "../scripts/"

assets = [
    # CLI binary
    ["target/release/sesame", "/usr/bin/sesame", "755"],
    # Headless daemon binaries
    ["target/release/daemon-profile", "/usr/bin/daemon-profile", "755"],
    ["target/release/daemon-secrets", "/usr/bin/daemon-secrets", "755"],
    ["target/release/daemon-launcher", "/usr/bin/daemon-launcher", "755"],
    ["target/release/daemon-snippets", "/usr/bin/daemon-snippets", "755"],
    # Headless systemd units
    ["../contrib/systemd/open-sesame-headless.target", "/usr/lib/systemd/user/open-sesame-headless.target", "644"],
    ["../contrib/systemd/open-sesame-profile.service", "/usr/lib/systemd/user/open-sesame-profile.service", "644"],
    ["../contrib/systemd/open-sesame-secrets.service", "/usr/lib/systemd/user/open-sesame-secrets.service", "644"],
    ["../contrib/systemd/open-sesame-launcher.service", "/usr/lib/systemd/user/open-sesame-launcher.service", "644"],
    ["../contrib/systemd/open-sesame-snippets.service", "/usr/lib/systemd/user/open-sesame-snippets.service", "644"],
    # Man page (generated by xtask)
    ["../target/man/sesame.1.gz", "/usr/share/man/man1/sesame.1.gz", "644"],
    # Shell completions (generated by xtask)
    ["../target/completions/sesame.bash", "/usr/share/bash-completion/completions/sesame", "644"],
    ["../target/completions/_sesame", "/usr/share/zsh/vendor-completions/_sesame", "644"],
    ["../target/completions/sesame.fish", "/usr/share/fish/vendor_completions.d/sesame.fish", "644"],
    # Example configuration
    ["../config.example.toml", "/usr/share/doc/open-sesame/config.example.toml", "644"],
]
